samples/syntax_errors/if_error.epl
import bio.out;

fnc Main() {
    if {
    }

    if decl i uint; i > 2 {}
}